@@ -1,4 +1,4 @@
-Copyright (c) 2014-2015 Christopher Thielen, others.
+Copyright (c) 2014-2017 Christopher Thielen, others.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
