@@ -11,6 +11,8 @@ GITHUB_PROJECTS:
   - tag1: "gh_org/gh_project_name"
   - tag2: "gh_org/gh_project_name"
 
+SERVICENOW_URL: ""
+
 # Set these values for LDAP lookup support. Switch _ENABLED to true.
 LDAP_HOST: ""
 LDAP_PORT: ""
@@ -38,6 +40,7 @@ GLOBAL:
   Roles: true
   Devboard: true
   GitHub: true
+  ServiceNow: false
 
 # Define who can access extra details on a command
 PRIVATE:
